gitops/k8s-manifests/server3/otel-gateway/HTTPRoute.otel.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: otel-gateway
  namespace: monitoring
  labels:
    app.kubernetes.io/name: otel-gateway
    app.kubernetes.io/component: observability
  annotations:
    external-dns.alpha.kubernetes.io/target: "192.168.1.202"
    argocd.argoproj.io/sync-wave: "100"
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - otel.server3.home
  rules:
    - backendRefs:
        - name: otel-gateway-opentelemetry-collector
          namespace: monitoring
          port: 4318
